force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/Customer_Potential_Study__c.object-meta.xml
<CustomObject>
    <label>Customer Potential Study</label>
    <nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>Customer Potential Study</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Potential Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>