force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Ambient_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Temperature__c</fullName>
    <label>Ambient Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;-25D</fullName>
            </value>
            <value>
                <fullName>0 to -25 D</fullName>
            </value>
            <value>
                <fullName>0-20D</fullName>
            </value>
            <value>
                <fullName>20-35D</fullName>
            </value>
            <value>
                <fullName>35-45D</fullName>
            </value>
            <value>
                <fullName>45-55D</fullName>
            </value>
            <value>
                <fullName>&gt;55 D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>