force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Ambient_Temperature_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Ambient_Temperature_Remarks__c</fullName>
    <label>Ambient Temperature Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>