force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Any_Other_Related_Factors__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Related_Factors__c</fullName>
    <label>Any Other Related Factors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>