force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Any_Other_Related_Factors_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Related_Factors_Remarks__c</fullName>
    <label>Any Other Related Factors Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>