force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Average_Speed_Range__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed_Range__c</fullName>
    <label>Average Speed Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-06 kmph</fullName>
            </value>
            <value>
                <fullName>07 -10 kmph</fullName>
            </value>
            <value>
                <fullName>11-15 kmph</fullName>
            </value>
            <value>
                <fullName>16-25kmph</fullName>
            </value>
            <value>
                <fullName>25-40 kmph</fullName>
            </value>
            <value>
                <fullName>&gt;40 kmph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>