force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Average_Speed_Range_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed_Range_Remarks__c</fullName>
    <label>Average Speed Range Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>