force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Avg_Distance_Coverage_At_A_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Avg_Distance_Coverage_At_A_Stretch__c</fullName>
    <label>Avg Distance Coverage At A Stretch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50 m</fullName>
            </value>
            <value>
                <fullName>50-100 m</fullName>
            </value>
            <value>
                <fullName>100-250 m</fullName>
            </value>
            <value>
                <fullName>250-500m</fullName>
            </value>
            <value>
                <fullName>500-750 m</fullName>
            </value>
            <value>
                <fullName>750-1000m</fullName>
            </value>
            <value>
                <fullName>1000-1500m</fullName>
            </value>
            <value>
                <fullName>1500-2000m</fullName>
            </value>
            <value>
                <fullName>&gt;2000m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>