force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Avg_Distance_Covered_In_A_Day_Kms__c.field-meta.xml
<CustomField>
    <fullName>Avg_Distance_Covered_In_A_Day_Kms__c</fullName>
    <label>Avg Distance Covered In A Day - Kms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10 km</fullName>
            </value>
            <value>
                <fullName>10-25 km</fullName>
            </value>
            <value>
                <fullName>25-50km</fullName>
            </value>
            <value>
                <fullName>50-75km</fullName>
            </value>
            <value>
                <fullName>75-100 km</fullName>
            </value>
            <value>
                <fullName>&gt;100 kms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>