force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Avg_Distance_Covered_In_A_Day_Kms_Rema__c.field-meta.xml
<CustomField>
    <fullName>Avg_Distance_Covered_In_A_Day_Kms_Rema__c</fullName>
    <label>Avg Distance Covered In A Day - Kms Rema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>