force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Competitor_Share_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Share_Estimated__c</fullName>
    <label>Competitor Share Estimated  %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>