force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Competitor_Share_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Share_Estimated_Value__c</fullName>
    <label>Competitor Share Estimated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>