force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Credit_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expectations__c</fullName>
    <label>Credit Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>0-15 days</fullName>
            </value>
            <value>
                <fullName>16-30 days</fullName>
            </value>
            <value>
                <fullName>30-45 days</fullName>
            </value>
            <value>
                <fullName>45-60 days</fullName>
            </value>
            <value>
                <fullName>60-90 days</fullName>
            </value>
            <value>
                <fullName>&gt;90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>