force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Potential Studies</relationshipLabel>
    <relationshipName>Customer_Potential_Studies</relationshipName>
    <type>Lookup</type>
</CustomField>