force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Delivery_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Remarks__c</fullName>
    <label>Delivery Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>