force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Equipment_Maintenance_In_General__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Maintenance_In_General__c</fullName>
    <label>Equipment Maintenance In General</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>