force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Equipment_Maintenance_In_General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Maintenance_In_General_Remarks__c</fullName>
    <label>Equipment Maintenance In General Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>