force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Fitment__c.field-meta.xml
<CustomField>
    <fullName>Fitment__c</fullName>
    <label>Fitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>