force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Fitment_Carried_Out_Inside_Outside__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Carried_Out_Inside_Outside__c</fullName>
    <label>Fitment Carried Out -Inside/Outside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>