force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Fitment_Carried_Out_Inside_Outside_Rema__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Carried_Out_Inside_Outside_Rema__c</fullName>
    <label>Fitment Carried Out -Inside/Outside Rema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>