force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Fitment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Remarks__c</fullName>
    <label>Fitment Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>