force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/GEM_Company__c.field-meta.xml
<CustomField>
    <fullName>GEM_Company__c</fullName>
    <label>GEM Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>