force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Grand_Total_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Estimated__c</fullName>
    <label>Grand Total Estimated %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>