force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Grand_Total_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Estimated_Value__c</fullName>
    <label>Grand Total Estimated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>