force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Heat_Spot_Source_On_Tyre_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Heat_Spot_Source_On_Tyre_If_Any__c</fullName>
    <label>Heat Spot Source On Tyre If Any</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Work Place</fullName>
            </value>
            <value>
                <fullName>Ambient</fullName>
            </value>
            <value>
                <fullName>Continuous Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>