force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Heat_Spot_Source_On_Tyre_If_Any_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Heat_Spot_Source_On_Tyre_If_Any_Remarks__c</fullName>
    <label>Heat Spot Source On Tyre If Any Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>