force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Load_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Load_Pattern__c</fullName>
    <label>Load Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>