force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Load_Pattern_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Load_Pattern_Remarks__c</fullName>
    <label>Load Pattern Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>