force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Market_Standing__c.field-meta.xml
<CustomField>
    <fullName>Market_Standing__c</fullName>
    <label>Market Standing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>