force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Materials_Primarily_Handled__c.field-meta.xml
<CustomField>
    <fullName>Materials_Primarily_Handled__c</fullName>
    <label>Materials Primarily Handled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>