force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Max_Distance_Coverage_At_A_Stretch_Remar__c.field-meta.xml
<CustomField>
    <fullName>Max_Distance_Coverage_At_A_Stretch_Remar__c</fullName>
    <label>Max Distance Coverage At A Stretch Remar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>