force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/No_Of_Shifts__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Shifts__c</fullName>
    <label>No Of Shifts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>