force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/No_Of_Shifts_Remarks__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Shifts_Remarks__c</fullName>
    <label>No Of Shifts Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>