force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Other_Considerations_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Other_Considerations_If_Any__c</fullName>
    <label>Other Considerations-If Any</label>
    <length>255</length>
    <type>Text</type>
</CustomField>