force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Other_Considerations_If_Any_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Considerations_If_Any_Remarks__c</fullName>
    <label>Other Considerations-If Any Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>