force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Payment_Credentials_Market_Info__c.field-meta.xml
<CustomField>
    <fullName>Payment_Credentials_Market_Info__c</fullName>
    <label>Payment Credentials - Market Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>