force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Potential_Grading__c.field-meta.xml
<CustomField>
    <fullName>Potential_Grading__c</fullName>
    <label>Potential Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;1.00 Cr</fullName>
            </value>
            <value>
                <fullName>75l-1.00 lc</fullName>
            </value>
            <value>
                <fullName>50-75 lac</fullName>
            </value>
            <value>
                <fullName>25-50 lac</fullName>
            </value>
            <value>
                <fullName>10-25 lac</fullName>
            </value>
            <value>
                <fullName>5-10lac</fullName>
            </value>
            <value>
                <fullName>0-1 lac</fullName>
            </value>
            <value>
                <fullName>1-2 lac</fullName>
            </value>
            <value>
                <fullName>2-5 lac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>