force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>