force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Price_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Price_Remarks__c</fullName>
    <label>Price Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>