force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Quality_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Quality_Remarks__c</fullName>
    <label>Quality Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>