force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Sidewall_Damage__c.field-meta.xml
<CustomField>
    <fullName>Sidewall_Damage__c</fullName>
    <label>Sidewall Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>