force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Surface_Condition_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Surface_Condition_Remarks__c</fullName>
    <label>Surface Condition Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>