force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Tread_Damage__c.field-meta.xml
<CustomField>
    <fullName>Tread_Damage__c</fullName>
    <label>Tread Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chipping</fullName>
            </value>
            <value>
                <fullName>Chunking</fullName>
            </value>
            <value>
                <fullName>Cut Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>