force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Tread_Damage_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Tread_Damage_Remarks__c</fullName>
    <label>Tread Damage Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>