force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Tyre_Wear_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Wear_Pattern__c</fullName>
    <label>Tyre Wear Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Malwear</fullName>
            </value>
            <value>
                <fullName>Accelerated</fullName>
            </value>
            <value>
                <fullName>Wavy Wear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>