force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Tyre_Wear_Pattern_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Wear_Pattern_Remarks__c</fullName>
    <label>Tyre Wear Pattern Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>