force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Usage_Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours_Day__c</fullName>
    <label>Usage Hours/Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-8</fullName>
            </value>
            <value>
                <fullName>09-12</fullName>
            </value>
            <value>
                <fullName>13-16</fullName>
            </value>
            <value>
                <fullName>17-20</fullName>
            </value>
            <value>
                <fullName>21-24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>