force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Usage_Hours_Day_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours_Day_Remarks__c</fullName>
    <label>Usage Hours/Day Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>