force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Usage_Hours_Shift__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours_Shift__c</fullName>
    <label>Usage Hours/Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3</fullName>
            </value>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>7-8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>