force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Value_Addition__c.field-meta.xml
<CustomField>
    <fullName>Value_Addition__c</fullName>
    <label>Value Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>