force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Wheel_Rim_Damage_Equipment_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Rim_Damage_Equipment_Scoring__c</fullName>
    <label>Wheel Rim Damage/Equipment Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>