force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Wheel_Rim_Damage_Equipment_Scoring_Remar__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Rim_Damage_Equipment_Scoring_Remar__c</fullName>
    <label>Wheel Rim Damage/Equipment Scoring Remar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>