force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Work_Place_Hazards_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Work_Place_Hazards_If_Any__c</fullName>
    <label>Work Place Hazards If Any</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metal scrap</fullName>
            </value>
            <value>
                <fullName>Grating</fullName>
            </value>
            <value>
                <fullName>Racks</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Lubricant</fullName>
            </value>
            <value>
                <fullName>Heat Spot</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Littered Paper</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>