force-app/force-app/force-app/main/default/objects/Customer_Potential_Study__c/fields/Work_Place_Hazards_If_Any_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Work_Place_Hazards_If_Any_Remarks__c</fullName>
    <label>Work Place Hazards If Any Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>